file(GLOB_RECURSE _ALL_SOURCEFILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c *.h *.hpp *.cxx)
add_executable(EasyFlow ${_ALL_SOURCEFILES})
target_include_directories(EasyFlow PRIVATE ${CMAKE_SOURCE_DIR}/Public)
target_link_libraries(EasyFlow PRIVATE wxWidgets)
set_target_properties(EasyFlow PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
